# studio-solana-programs

./: Anchor.toml  README.md  package.json
programs/foster-studio/: Cargo.toml
programs/foster-studio/src/: constants.rs  errors.rs  lib.rs  models.rs  mpl_token_metadata.rs  state.rs
programs/foster-studio/src/instructions/: buy_product.rs  configure_product.rs  delete_product.rs  mod.rs
tests/: constants.ts  foster-studio.ts  lib.ts  logging.ts  mpl-token-metadata.ts  mplTokenMetadata.ts  setup.ts  utils.ts  web3.ts
